Fixed process exit on watch file - Minified bootbox - Removed last openshift configs - Fixed css for mobile

--- a/server/views/less/menu.less
+++ b/server/views/less/menu.less
@@ -1,4 +1,5 @@
 .main-mini-menu-bar {
+    display: none;
     position: fixed;
     top: 0;
     height: @main-mini-menu-bar-height;
@@ -37,6 +38,7 @@
 }
 
 a.main-menu-button {
+    display: none;
     position: fixed;
     top: 13px;
     left: 10px;
@@ -59,6 +61,7 @@ a.main-menu-button {
 }
 
 .main-menu-card {
+    display: none;
     position: fixed;
     top: 0;
     bottom: 0;
@@ -120,6 +123,12 @@ a.main-menu-button {
 
 // Phone devices
 @media (max-width: 767px) {
+    a.main-menu-button,
+    .main-mini-menu-bar,
+    .main-menu-card {
+        display: block;
+    }
+
     .main-menu-bar {
         display: none;
     }
@@ -171,13 +180,5 @@ a.main-menu-button {
             border-radius: 0;
             box-shadow: none;
         }
-    }
-}
-
-/* Medium devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-    .main-mini-menu-bar,
-    .main-menu-card {
-        display: none;
     }
 }
